Extract core evolution engine logic from Forms code-behind into its own class

--- a/Core/GenArt.Core.csproj
+++ b/Core/GenArt.Core.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Classes\Serializer.cs" />
     <Compile Include="Classes\Settings.cs" />
     <Compile Include="Classes\Tools.cs" />
+    <Compile Include="EvolutionEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
