--- a/Core/GenArt.Core.csproj
+++ b/Core/GenArt.Core.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Classes\FileUtil.cs" />
     <Compile Include="Classes\FitnessCalculator.cs" />
     <Compile Include="Classes\MathUtils.cs" />
+    <Compile Include="Classes\NewFitnessCalculator.cs" />
     <Compile Include="Classes\Renderer.cs" />
     <Compile Include="Classes\Serializer.cs" />
     <Compile Include="Classes\Settings.cs" />
